# bevy-playground

bevy_shooter/: Cargo.toml
bevy_shooter/src/: defs.rs  main.rs  player.rs  stage.rs
