[package]
name = "bevy_shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.bevy]
version = "0.15.0"
default-features = false
features = ["bevy_sprite", "png", "bevy_window", "bevy_winit"]